# screencfg

./: Cargo.toml  Makefile  update-pkgbuild.sh
i3/: Cargo.toml
i3/src/: error.rs  lib.rs
pkg/arch/grm-git/: .SRCINFO  PKGBUILD
pkg/arch/local/: .SRCINFO  PKGBUILD
pkg/arch/screencfg-git/: .SRCINFO  PKGBUILD
src/: config.rs  error.rs  i3.rs  main.rs
xrandr/: Cargo.toml
xrandr/src/: error.rs  lib.rs
