[package]
name = "screencfg"
description = "Automatically configure your screen setup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", default-features = false, features = ["std", "derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

[features]
default = ["full"]
full = ["clap/help", "clap/color", "clap/suggestions", "clap/usage", "clap/error-context"]
